--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#000000"/>
   <title>Mesto</title>
-  <link rel="stylesheet" href="vendor/normalize.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>">
 </head>
 <body>
   <div class="root">
 
     <header class="header root__section">
-      <img src="./img/logo.svg" alt="mesto logo" class="logo">
+      <img src="<%=require('../public/img/logo.svg')%>" alt="mesto logo" class="logo">
     </header>
 
     <div class="profile root__section">
@@ -39,12 +38,6 @@
 
   </div>
 
-  <script src="./js/api.js"></script>
-  <script src="./js/user.js"></script>
-  <script src="./js/popup.js"></script>
-  <script src="./js/card.js"></script>
-  <script src="./js/cardList.js"></script>
-  <script src="./js/form.js"></script>
-  <script src="./js/script.js"></script>
+  <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
 </body>
 </html>
